# 3BODYUI

./: .gitignore  App.tsx  README.md  index.html  metadata.json  package.json  types.ts
3bodyui/: .gitignore  README.md  constants.ts  metadata.json  next.config.ts  package-lock.json  package.json  tailwind.config.ts  tsconfig.json  tsconfig.tsbuildinfo  types.ts
3bodyui/.tauri/: Cargo.toml  tauri.android.conf.json  tauri.conf.json
3bodyui/app/: globals.css  layout.tsx  page.tsx
3bodyui/components/: ProtocolVisualizer.tsx  QRScanner.tsx  QrCodeGenerator.tsx
3bodyui/lib/: errors.ts  internalFetch.ts  proxy.ts  types.ts  workos.ts
3bodyui/scripts/: dev-safe.mjs
3bodyui/services/: blockchainService.ts  priceService.ts
3bodywebservice/: package.json  tailwind.config.ts
3bodywebservice/app/: globals.css
3bodywebservice/components/: ProtocolVisualizer.tsx
components/: ProtocolVisualizer.tsx  WalletButton.tsx
docs/: ARCHITECTURE.md  BUILD.md  DEPLOYMENT.md  DEVELOPMENT.md  MOBILE.md  SECURITY.md  SETUP.md
services/: mockService.ts
smartcontract/: .gitignore  Makefile  README.md  cargo.toml  docker-compose.yml
smartcontract/atomic_swap/: cargo.toml
smartcontract/escrow/: cargo.toml
smartcontract/lp_registry/: cargo.toml
src-tauri/: .gitignore  Cargo.toml  tauri.android.conf.json  tauri.conf.json  tauri.ios.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: lib.rs  main.rs
thunder-tests/: 3bodyui-api-https.thunder_environment.json  3bodyui-api-local.thunder_environment.json  3bodyui-api-routes.thunder_collection.json  README.md
(+34 files in other folders)
