[package]
name = "three-body-payment"
version = "0.0.0"
description = "3 Body Payment - Decentralized tri-party settlement protocol"
authors = ["Three Body Protocol Team"]
license = "MIT"
repository = "https://github.com/yourusername/3BODYUI"
edition = "2021"
rust-version = "1.77.2"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-shell = "2"
tauri-plugin-notification = "2"
tauri-plugin-fs = "2"
tauri-plugin-os = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
# Cross-platform secure storage using native keychain/keystore
keyring = { version = "3", features = ["linux-native", "apple-native", "windows-native"] }

[target.'cfg(not(any(target_os = "android", target_os = "ios")))'.dependencies]
tauri-plugin-updater = "2"
